Domain: Grails 7 / Jakarta EE compatibility updates across pricewellDomain
Miscellaneous Grails 7 migration fixes across remaining domain classes:

- UserRole.groovy: updated for Spring Security Core 7.x join table conventions
- Service.groovy, ServiceProfile.groovy, ServiceQuotation.groovy:
  javax.persistence.* → jakarta.persistence.* namespace migration
- EncriptAndDecript.java: javax.* → jakarta.* imports
- Nimble domain stubs (Details, FederationProvider, LoginRecord,
  LevelPermission, Url): retain original table names from NimbleConfig;
  javax.* → jakarta.* where applicable; removed Nimble plugin-specific
  imports (ConfigurationHolder, ApplicationHolder)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>